syntax = "proto3";

package note;

option go_package = "./internal/pkg/survey/delivery/grpc/gen/;gen";

import "google/api/annotations.proto"; // вот импорт

service Stat {
  rpc GetSurvey(GetSurveyRequest) returns (GetSurveyResponse) {
    option (google.api.http) = {
      get: "/api/survey"
    };
  }

  rpc Vote(VoteRequest) returns (VoteResponse) {
    option (google.api.http) = {
      post: "/api/vote"
      body: "*"
    };
  }

  rpc CreateSurvey(CreateSurveyRequest) returns (CreateSurveyResponse) {
    option (google.api.http) = {
      post: "/api/survey"
      body: "*"
    };
  }

  rpc GetStats(GetStatsRequest) returns (GetStatsResponse) {
    option (google.api.http) = {
      get: "/api/stats"
    };
  }
}

message GetStatsRequest {}

message StatModel {
  string QuestionTitle = 1;
  string QuestionType = 2;
  string Label = 3;
  int32 Value = 4;
  string QuestionId = 5;
}

message GetStatsResponse {
  repeated StatModel Stats = 1;
}

message VoteRequest {
  string QuestionId = 1;
  int32 Vote = 2;
}

message GetSurveyRequest {}

message VoteResponse {}

message Question {
  string Id = 1;
  string Title = 2;
  int64 MinMark = 3;
  int64 Skip = 4;
  string QuestionType = 5;
  int64 number = 6;
  string SurveyId = 7;
}

message CreateQuestionRequest {
  string Title = 1;
  int64 MinMark = 3;
  int64 Skip = 4;
  string QuestionType = 2;
}

message GetSurveyResponse {
  repeated Question Questions = 1;
}

message CreateSurveyRequest {
  repeated CreateQuestionRequest Questions = 1;
}

message CreateSurveyResponse {}
